2013-08-23  Dmitry Antipov  <dmantipov@yandex.ru>

	Minor cleanup for redisplay interface and few related functions.
	* frame.h (enum text_cursor_kinds): Move from here...
	* dispextern.h (enum text_cursor_kinds): ...to here.
	(toplevel): Drop unnecessary declarations.
	(struct redisplay_interface): Use bool and enum text_cursor_kinds
	in update_window_end_hook and draw_window_cursor functions.
	(display_and_set_cursor, x_update_cursor): Adjust prototypes.
	* nsterm.m (ns_update_window_end, ns_draw_window_cursor):
	* w32term.c (x_update_window_end,w32_draw_window_cursor):
	* xterm.c (x_update_window_end, x_draw_window_cursor):
	* xdisp.c (display_and_set_cursor, update_window_cursor)
	(update_cursor_in_window_tree, x_update_cursor): Use bool and
	enum text_cursor_kinds where appropriate.

2013-08-23  Dmitry Antipov  <dmantipov@yandex.ru>

	Redesign redisplay interface to drop updated_row and updated_area.
	* dispextern.h (updated_row, updated_area): Remove declaration.
	(struct redisplay_interface): Pass glyph row and row area parameters
	to write_glyphs, insert_glyphs and clear_end_of_line functions.
	(x_write_glyphs, x_insert_glyphs, x_clear_end_of_line):
	Adjust prototypes.
	* dispnew.c (updated_row, updated_area): Remove.
	(redraw_overlapped_rows, update_window_line): Adjust user.
	(update_marginal_area, update_text_area): Likewise.  Pass updated row
	as a parameter.  Prefer enum glyph_row_area to int where appropriate.
	* xdisp.c (x_write_glyphs, x_insert_glyphs, x_clear_end_of_line):
	Adjust users.

2013-08-22  Paul Eggert  <eggert@cs.ucla.edu>

	* process.c (flush_pending_output): Remove stub.
	All uses removed.

2013-08-21  Paul Eggert  <eggert@cs.ucla.edu>

	* callproc.c: Fix race that killed background processes (Bug#15144).
	(call_process): New arg TEMPFILE_INDEX.  Callers changed.
	Record deleted process-id in critical section, not afterwards.
	Don't mistakenly kill process created by a call-process invocation
	that discards output and does not wait.
